--- a/landing/index.html
+++ b/landing/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     
     <link rel="stylesheet" href="resources/css.css">
-    <link rel="stylesheet" href="resources/application_good.css">
+    <link rel="stylesheet" href="resources/application.css">
     <link rel="shortcut icon" href="resources/favicon_1.ico" type="image/x-icon">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
