--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     
-    <link rel="stylesheet" href="resources/css.css">
-    <link rel="stylesheet" href="resources/application.css">
-    <link rel="shortcut icon" href="resources/favicon_1.ico" type="image/x-icon">
+    <link rel="stylesheet" href="application.css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
