--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@ It allows motivated learners to make knowledge available beyond the existing lan
 </h3>
 
 <h2>
-  <span>{</span>
   How to get started?
-  <span>}</span>
 </h2>
 
+<a href="installation.html">
+         <img alt="Get started!" src="button.png" width=885" height="126">
+</a>
+	    
 <ul class="triptych situations clearfix">
 
   <li class="existing">
@@ -50,7 +52,7 @@ It allows motivated learners to make knowledge available beyond the existing lan
       <h3>2. Watch educational videos</h3>
 	
 	<p>
-		Our plugin is compatible with the usual YouTube video player. You just wath viedeos as you usually do.
+		Our plugin is fully compatible with the usual YouTube video player. You just wath videos as you usually do.
     </p>
 	
   </li>
@@ -68,9 +70,7 @@ It allows motivated learners to make knowledge available beyond the existing lan
 </ul>
 
 <h2>
-  <span>{</span>
-  Why we think this would work?
-  <span>}</span>
+  Why should you contribute?
 </h2>
 
 <ul class="triptych situations clearfix">
@@ -78,7 +78,6 @@ It allows motivated learners to make knowledge available beyond the existing lan
 <li class="existing">
 
 <h3>Inspiration</h3>
-
 
 <p>
 During the global lockdown, there’s a growing demand for online media content. This includes online courses, news stories, as well as recreational content such as youtube blogs and streaming services.
@@ -89,43 +88,41 @@ This demand goes well beyond national borders. It brings a growing need for exch
 </p>
 
 <p>
-We think that having access to the world-leading online courses and the best TV shows should not depend on the language you speak. Our work is meant to facilitate this crucial need. For this, we present the community-driven service for the production of high-quality subtitles: Subtite.
-</p>
-
-<p>
-We believe that in many ways, the post-corona world can be a newer and better place - not only that of grief and economic uncertainty. If anything, global online integration is the way to go. However, language barriers still serve as the online equivalent of a lockdown. If we can lift it, let’s do it now!
+We think that having access to the world-leading online courses and the best TV shows should not depend on the language you speak. Subtite facilitates this crucial need.
 </p>
 
 </li>
-
 
 <li class="existing">
 
-<h3>Challenges</h3>
-
+<h3>Easiness</h3>
 
 <p>
-In the development of this service, we are going to meet the two crucial challenges. One is to offer the relevant tasks to the viewers, meeting both their motivation level and the sphere of expertise. The other is to combine contributions of different viewers into high-quality content.
+The service provides you with two-fold way to contribute into tackling down language barier: you can either propose your subtitling of short pieces of video or assess existing subtitles on your native language.
 </p>
 
 <p>
-During the EU vs Virus hackathon, we aim to give a prototype solution to these key problems, focusing on the specific context of educational resources (such as Coursera, edX and many Youtube channels).
+The workflow is easy and does not require any special efforts from you: you just watch educational videos as you usually do, and at the end of the video rate 5-second portion of subtitles or make your variant of subtitles for 5-second piece.
 </p>
-
+	
 </li>
-
 
 <li class="existing">
 
-<h3>Research</h3>
-
+<h3>Community</h3>
 
 <p>
-Find out here scientific justification of our concept <a href="justification.html">here</a>.
+Users of our service is the community of people, fighting against language bariers and promoting education worldwide. Making sucessfull contribution, you become more important part of community.
 </p>
+
+<p>
+Contributing more, you might become member of The Leaders Board. You will get invited onto our special tranings and webinars, your opinion on translation will get increased weight.
+</p>
+
 
 </li>
 
+	
 </ul>
 
 
