--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@ It allows motivated learners to make knowledge available beyond the existing lan
 	    
 <ul class="triptych situations clearfix">
 
-  <li class="existing">
+  <li class="whatever">
     <a href="installation.html">
-      <span class="triptych-sprite community"></span>
+      <img alt="Installation" src="install.png" width="72" height="56">
       <h3>1. Install add-on</h3>
     </a>
     <p>
@@ -44,18 +44,16 @@ It allows motivated learners to make knowledge available beyond the existing lan
   
   
   <li class="whatever">
-      <span class="triptych-sprite three-arrows"></span>
+      <img alt="Whatch" src="whatch.png" width="72" height="56">
       <h3>2. Watch educational videos</h3>
-	
-	<p>
-		Our plugin is fully compatible with the usual YouTube video player. You just wath videos as you usually do.
+    <p>
+      Our plugin is fully compatible with the usual YouTube video player. You just wath videos as you usually do.
     </p>
 	
   </li>
   
-  
-  <li class="copyleft">
-      <span class="triptych-sprite circular"></span>
+  <li class="whatever">
+      <img alt="Contribute" src="contribute.png" width="72" height="56">
       <h3>3. Contribute to subtitles </h3>
     <p>
       Follow a kind suggestion to transcribe a few sentences from the video into your native language.
@@ -66,7 +64,7 @@ It allows motivated learners to make knowledge available beyond the existing lan
 </ul>
 
 <a href="installation.html">
-         <img alt="Get started!" src="button.png" width=442" height="63">
+         <img alt="Get started!" src="button.png" width="442" height="63">
 </a>
 	    
 <h2>
