--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ It allows motivated learners to make knowledge available beyond the existing lan
 
   <li class="whatever">
     <a href="installation.html">
-      <img alt="Installation" src="install.png" width="72" height="56">
+      <img alt="Install" src="install.png" width="72" height="56">
       <h3>1. Install add-on</h3>
     </a>
     <p>
@@ -44,7 +44,7 @@ It allows motivated learners to make knowledge available beyond the existing lan
   
   
   <li class="whatever">
-      <img alt="Whatch" src="whatch.png" width="72" height="56">
+      <img alt="Watch" src="watch.png" width="72" height="56">
       <h3>2. Watch educational videos</h3>
     <p>
       Our plugin is fully compatible with the usual YouTube video player. You just wath videos as you usually do.
