--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ It allows motivated learners to make knowledge available beyond the existing lan
   
   <li class="whatever">
       <img alt="Watch" src="watch.png" width="72" height="56">
-      <h3>2. Watch educational videos</h3>
+      <h3>2. Watch videos</h3>
     <p>
       Our plugin is fully compatible with the usual YouTube video player. You just wath videos as you usually do.
     </p>
