--- a/index.html
+++ b/index.html
@@ -78,11 +78,7 @@ It allows motivated learners to make knowledge available beyond the existing lan
 <h3>Inspiration</h3>
 
 <p>
-During the global lockdown, there’s a growing demand for online media content. This includes online courses, news stories, as well as recreational content such as youtube blogs and streaming services.
-</p>
-
-<p>
-This demand goes well beyond national borders. It brings a growing need for exchange between the online bubbles that are currently in place. One of the most crucial divisions, globally but especially in Europe, is based on language.
+During the global lockdown, there’s a growing demand for online media content. This includes online courses, news stories, as well as recreational content such as youtube blogs and streaming services. One of the most crucial obstacle to access worldwide, is based on language.
 </p>
 
 <p>
