--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ It allows motivated learners to make knowledge available beyond the existing lan
 </a>
 	    
 <h2>
-  Why should you contribute?
+  Why you should contribute?
 </h2>
 
 <ul class="triptych situations clearfix">
