--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@ It allows motivated learners to make knowledge available beyond the existing lan
   </li>
   
 </ul>
-
+    
 <a href="installation.html">
-         <img alt="Get started!" src="button.png" width="250" height="63">
-</a>
-	    
+	<img class="install-button" alt="Get started!" src="button.png">
+</a>   
+
 <h2>
   Why you should contribute?
 </h2>
