--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@ It allows motivated learners to make knowledge available beyond the existing lan
 <ul class="triptych situations clearfix">
 
   <li class="whatever">
-    <a href="installation.html">
+    <a href="/installation.html">
       <img alt="Install" src="install.png" width="72" height="56">
       <h3>1. Install add-on</h3>
     </a>
     <p>
-      Find here detailed <a href="installation.html">instalation instructions</a> for your favourite browser.
+      Find here detailed <a href="/installation.html">instalation instructions</a> for your favourite browser.
     </p>
   </li>
   
@@ -63,7 +63,7 @@ It allows motivated learners to make knowledge available beyond the existing lan
   
 </ul>
     
-<a href="installation.html">
+<a href="/installation.html">
 	<img class="install-button" alt="Get started!" src="button.png">
 </a>   
 
