--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 	<head itemscope="" itemtype="http://schema.org/WebSite">
 	
@@ -20,10 +20,10 @@
         <h1>Subtite.it</h1>
 
 <h3>
-Subtite by Scribefellas is the first community-driven service for transcribing educational content.
+Subtite by Scribefellas is the first community-driven service for transcribing video content.
 <br>
 <br>
-It allows motivated learners to make knowledge available beyond the existing language barriers.
+It allows motivated viewers to make knowledge and entertainment available beyond the existing language barriers.
 </h3>
 
 <h2>
@@ -47,7 +47,7 @@ It allows motivated learners to make knowledge available beyond the existing lan
       <img alt="Watch" src="watch.png" width="72" height="56">
       <h3>2. Watch videos</h3>
     <p>
-      Our plugin is fully compatible with the usual YouTube video player. You just wath videos as you usually do.
+      Our plugin is fully compatible with the usual YouTube video player. You just watch videos as you usually do.
     </p>
 	
   </li>
@@ -68,7 +68,7 @@ It allows motivated learners to make knowledge available beyond the existing lan
 </a>   
 
 <h2>
-  Why you should contribute?
+  Why should you contribute?
 </h2>
 
 <ul class="triptych situations clearfix">
@@ -92,7 +92,7 @@ We think that having access to the world-leading online courses and the best TV 
 <h3>Easiness</h3>
 
 <p>
-The service provides you with two-fold way to contribute into tackling down language barier: you can either propose your subtitling of short pieces of video or assess existing subtitles on your native language.
+The service provides you with a two-fold way to contribute into lifting the language barriers, by proposing your subtitles for the video or assessing the existing subtitles. In both cases, we're talking about a single line of subtitles. Once you completed or assessed that single line, your job is done!
 </p>
 
 <p>
@@ -106,11 +106,11 @@ The workflow is easy and does not require any special efforts from you: you just
 <h3>Community</h3>
 
 <p>
-Users of our service is the community of people, fighting against language bariers and promoting education worldwide. Making sucessfull contribution, you become more important part of community.
+Users of our service is the community of people, fighting against language barriers and promoting worldwide access to information. By making consistent contributions, you become an important part of the YouTube community!
 </p>
 
 <p>
-Contributing more, you might become member of The Leaders Board. You will get invited onto our special tranings and webinars, your opinion on translation will get increased weight.
+By extraordinary contributions, you might become a member of the Leaders Board. The members of the Leaders Board are regularly invited onto our special tranings and webinars, and facilitate the growth and development of our community.
 </p>
 
 
