add link to github before we build packaged extension

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <h3>1. Install add-on</h3>
     </a>
     <p>
-      First <a href="/installation.html">download</a> the app.
+      First <a href="https://github.com/vindex10/subtite.it-extension">download</a> the app.
     </p>
   </li>
   
