--- a/index.html
+++ b/index.html
@@ -17,20 +17,27 @@
   <body class="default home">
     <div class="container">
       
-        <header>
-        <div class="logo">Subtite.it</div>
+        <header class="duo header">
+        <div class="duo-left logo">Subtite.it</div>
 
-        <div class="subtitle">
-        Developed by Scribefellas is the first community-driven service for transcribing video content.
-        It allows motivated viewers to make knowledge and entertainment available beyond the existing language barriers. Find more in the official slides at <a href="https://drive.google.com/file/d/183KhgMrsIqRk_9F1HR_BU0RsGllYVHHD/view">Google Drive</a>.
+        <div class="duo-right subtitle">
+            Make knowledge and entertainment available beyond the existing language barriers! 
         </div>
         </header>
 
-<p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/7D-Kn5-aFMU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</p>
+<div class="duo about">
+    <div class="text-section duo-left">
+        <b>Developed by <i>Scribefellas</i></b>,<br />
 
-<ul class="triptych situations clearfix">
+        We are the first community-driven service for transcribing video content. Find more info in the <a href="https://drive.google.com/file/d/183KhgMrsIqRk_9F1HR_BU0RsGllYVHHD/view">Slides</a> and join the crowd!
+    </div>
+
+    <div class="duo-right">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/7D-Kn5-aFMU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="about-video"></iframe>
+    </div>
+</div>
+
+<ul class="triptych situations">
 
   <li class="whatever">
     <img alt="Install" src="install.png" width="72" height="56">
@@ -65,7 +72,7 @@
   Why should you contribute?
 </h2>
 
-<ul class="triptych situations clearfix alignleft">
+<ul class="triptych situations alignleft">
 
 <li class="existing">
 
