--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="text-section duo-left">
         <b>Developed by <i>Scribefellas</i></b>,<br />
 
-        the first community-driven service for transcribing video content. Find more info in the <a href="https://drive.google.com/file/d/183KhgMrsIqRk_9F1HR_BU0RsGllYVHHD/view">Slides</a> and join the crowd!
+        the first community-driven service for transcribing video content. Find more info in the <a href="https://docs.google.com/presentation/d/1LkYpcEDh2YL1gqMOQYA-ZUNKxRwXSbeE/">Slides</a> and join the crowd!
     </div>
 
     <div class="duo-right">
